# orfile

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix
examples/: config.json
examples/select-tool/: Cargo.toml
examples/select-tool/src/: main.rs
examples/select-tool/src/cli/: mod.rs
examples/select-tool/src/cli/divide/: mod.rs
examples/select-tool/src/cli/kebab_divide/: mod.rs
examples/select-tool/src/cli/multiply/: mod.rs
examples/tool/: Cargo.toml
examples/tool/src/: main.rs
examples/tool/src/cli/: mod.rs
examples/tool/src/cli/add/: mod.rs
examples/tool/src/cli/add_generic/: generic.rs
orfile/macro/: Cargo.toml
orfile/macro/src/: derive.rs  lib.rs
orfile/orfile/: Cargo.toml
orfile/orfile/src/: lib.rs
orfile/util/: Cargo.toml
select/macro/: Cargo.toml
select/macro/src/: derive.rs  lib.rs
select/select/: Cargo.toml
select/select/src/: lib.rs
select/util/: Cargo.toml
select/util/src/: lib.rs
slect/macro/: Cargo.toml
slect/macro/src/: derive.rs  lib.rs
slect/slect/: Cargo.toml
slect/slect/src/: lib.rs
slect/util/: Cargo.toml
slect/util/src/: lib.rs
