[package]
name = "tool"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }


[dependencies]
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
clap = { workspace = true}
dotenv = { workspace = true }
anyhow = { workspace = true }
orfile = { workspace = true }

[lints]
workspace = true