[package]
name = "orfile"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
orfile-macro = { workspace = true}
orfile-util = { workspace = true}
anyhow = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
