[package]
name = "select"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
select-macro = { workspace = true}
select-util = { workspace = true}
anyhow = { workspace = true }
serde_json = { workspace = true }
once_cell = { workspace = true }

[lints]
workspace = true
